[gd_scene load_steps=8 format=3 uid="uid://8klixtb16l7"]

[ext_resource type="Script" path="res://scripts/fase_1.gd" id="1_i27m7"]
[ext_resource type="PackedScene" uid="uid://khd5ueqw7mka" path="res://scenes/player.tscn" id="2_vw8d1"]
[ext_resource type="Texture2D" uid="uid://c6tvddml5a8ut" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/4 - Winter World/Terrain (16 x 16).png" id="3_e5vfp"]
[ext_resource type="PackedScene" uid="uid://7d4vvt0mpnjk" path="res://scenes/chegada.tscn" id="4_5p35h"]
[ext_resource type="PackedScene" uid="uid://cc76g37ukpw0w" path="res://scenes/more_time.tscn" id="5_5odvk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2da0"]
texture = ExtResource("3_e5vfp")
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_jf0g2"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_e2da0")

[node name="Fase2" type="Node2D"]
script = ExtResource("1_i27m7")
metadata/_edit_vertical_guides_ = [656.0]

[node name="Player" parent="." instance=ExtResource("2_vw8d1")]
position = Vector2(10, 278)

[node name="level" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jf0g2")
format = 2
layer_0/tile_data = PackedInt32Array(1179648, 262144, 1, 1179649, 262144, 1, 1179650, 262144, 1, 1179651, 262144, 1, 1179652, 262144, 1, 1179653, 262144, 1, 1179654, 262144, 1, 1179655, 262144, 1, 1179656, 262144, 1, 1179657, 262144, 1, 1179658, 262144, 1, 1179659, 262144, 1, 1179660, 262144, 1, 1179661, 262144, 1, 1179662, 262144, 1, 1179663, 262144, 1, 1179664, 262144, 1, 1179665, 262144, 1, 1179666, 262144, 1, 1179667, 262144, 1, 1179668, 262144, 1, 1179669, 262144, 1, 1179670, 262144, 1, 1179671, 262144, 1, 1179672, 262144, 1, 1179673, 262144, 1, 1179674, 262144, 1, 1179675, 262144, 1, 1179676, 262144, 1, 1179677, 262144, 1, 1179678, 262144, 1, 1179679, 262144, 1, 1179680, 262144, 1, 1179681, 262144, 1, 1179682, 262144, 1, 1179683, 262144, 1, 1179684, 262144, 1, 1179685, 262144, 1, 1179686, 262144, 1, 1179687, 262144, 8, 1245184, 262144, 3, 1245185, 262144, 3, 1245186, 262144, 3, 1245187, 262144, 3, 1245188, 262144, 3, 1245189, 262144, 3, 1245190, 262144, 3, 1245191, 262144, 3, 1245192, 262144, 3, 1245193, 262144, 3, 1245194, 262144, 3, 1245195, 262144, 3, 1245196, 262144, 3, 1245197, 262144, 3, 1245198, 262144, 3, 1245199, 262144, 3, 1245200, 262144, 3, 1245201, 262144, 3, 1245202, 262144, 3, 1245203, 262144, 3, 1245204, 262144, 3, 1245205, 262144, 3, 1245206, 262144, 3, 1245207, 262144, 3, 1245208, 262144, 3, 1245209, 262144, 3, 1245210, 262144, 3, 1245211, 262144, 3, 1245212, 262144, 3, 1245213, 262144, 3, 1245214, 262144, 3, 1245215, 262144, 3, 1245216, 262144, 3, 1245217, 262144, 3, 1245218, 262144, 3, 1245219, 262144, 3, 1245220, 262144, 3, 1245221, 262144, 3, 1245222, 262144, 3, 1245223, 262144, 3, 0, 262144, 8, 1, 262144, 8, 2, 262144, 8, 3, 262144, 8, 4, 262144, 8, 8, 262144, 8, 9, 262144, 8, 10, 262144, 8, 11, 262144, 8, 12, 262144, 8, 13, 262144, 8, 15, 262144, 8, 16, 262144, 8, 17, 262144, 8, 18, 262144, 8, 19, 262144, 8, 20, 262144, 8, 21, 262144, 8, 22, 262144, 8, 23, 262144, 8, 24, 262144, 8, 25, 262144, 8, 26, 262144, 8, 27, 262144, 8, 28, 262144, 8, 29, 262144, 8, 30, 262144, 8, 31, 262144, 8, 32, 262144, 8, 33, 262144, 8, 34, 262144, 8, 35, 262144, 8, 1114151, 262144, 8, 1048615, 262144, 8, 983079, 262144, 8, 917543, 262144, 8, 852007, 262144, 8, 786471, 262144, 8, 720935, 262144, 8, 655399, 262144, 8, 327719, 262144, 8, 262183, 262144, 8, 196647, 262144, 8, 1310719, 262144, 8, 1245183, 262144, 8, 1179647, 262144, 8, 1114111, 262144, 8, 1048575, 262144, 8, 983039, 262144, 8, 917503, 262144, 8, 851967, 262144, 8, 786431, 262144, 8, 720895, 262144, 8, 655359, 262144, 8, 589823, 262144, 8, 524287, 262144, 8, 458751, 262144, 8, 393215, 262144, 8, 327679, 262144, 8, 262143, 262144, 8, 196607, 262144, 8, 131071, 262144, 8, 65535, 262144, 8, 65536, 262144, 8, 131072, 262144, 8, 458752, 262144, 8, 524288, 262144, 8, 589824, 262144, 8, 655360, 262144, 8, 720896, 262144, 8, 786432, 262144, 8, 851968, 262144, 8, 917504, 262144, 8, 983040, 262144, 8, 65537, 262144, 8, 131073, 262144, 8, 458753, 262144, 8, 524289, 262144, 8, 589825, 262144, 8, 655361, 262144, 8, 720897, 262144, 8, 786433, 262144, 8, 851969, 262144, 8, 917505, 262144, 8, 983041, 262144, 8, 65538, 262144, 8, 131074, 262144, 8, 458754, 262144, 8, 524290, 262144, 8, 589826, 262144, 8, 655362, 262144, 8, 262147, 262144, 8, 327683, 262144, 8, 786435, 262144, 8, 851971, 262144, 8, 917507, 262144, 8, 983043, 262144, 8, 1114115, 262144, 8, 131076, 262144, 8, 262148, 262144, 8, 327684, 262144, 8, 393220, 262144, 8, 458756, 262144, 8, 524292, 262144, 8, 589828, 262144, 8, 655364, 262144, 8, 786436, 262144, 8, 851972, 262144, 8, 917508, 262144, 8, 983044, 262144, 8, 1114116, 262144, 8, 131077, 262144, 8, 262149, 262144, 8, 327685, 262144, 8, 393221, 262144, 8, 458757, 262144, 8, 1114117, 262144, 8, 131078, 262144, 8, 262150, 262144, 8, 327686, 262144, 8, 458758, 262144, 8, 589830, 262144, 8, 655366, 262144, 8, 720902, 262144, 8, 786438, 262144, 8, 851974, 262144, 8, 983046, 262144, 8, 1114118, 262144, 8, 131079, 262144, 8, 262151, 262144, 8, 327687, 262144, 8, 655367, 262144, 8, 720903, 262144, 8, 786439, 262144, 8, 851975, 262144, 8, 983047, 262144, 8, 1114119, 262144, 8, 65544, 262144, 8, 131080, 262144, 8, 262152, 262144, 8, 327688, 262144, 8, 458760, 262144, 8, 524296, 262144, 8, 655368, 262144, 8, 720904, 262144, 8, 786440, 262144, 8, 851976, 262144, 8, 983048, 262144, 8, 1048584, 262144, 8, 1114120, 262144, 8, 524297, 262144, 8, 786441, 262144, 8, 851977, 262144, 8, 983049, 262144, 8, 1048585, 262144, 8, 1114121, 262144, 8, 131082, 262144, 8, 262154, 262144, 8, 327690, 262144, 8, 393226, 262144, 8, 458762, 262144, 8, 524298, 262144, 8, 589834, 262144, 8, 655370, 262144, 8, 786442, 262144, 8, 851978, 262144, 8, 983050, 262144, 8, 1048586, 262144, 8, 1114122, 262144, 8, 131083, 262144, 8, 393227, 262144, 8, 458763, 262144, 8, 524299, 262144, 8, 589835, 262144, 8, 131084, 262144, 8, 196620, 262144, 8, 262156, 262144, 8, 393228, 262144, 8, 458764, 262144, 8, 524300, 262144, 8, 589836, 262144, 8, 655372, 262144, 8, 720908, 262144, 8, 786444, 262144, 8, 851980, 262144, 8, 983052, 262144, 8, 1114124, 262144, 8, 131085, 262144, 8, 196621, 262144, 8, 262157, 262144, 8, 393229, 262144, 8, 458765, 262144, 8, 589837, 262144, 8, 655373, 262144, 8, 720909, 262144, 8, 786445, 262144, 8, 851981, 262144, 8, 983053, 262144, 8, 1114125, 262144, 8, 458766, 262144, 8, 589838, 262144, 8, 655374, 262144, 8, 720910, 262144, 8, 983054, 262144, 8, 1114126, 262144, 8, 65551, 262144, 8, 131087, 262144, 8, 196623, 262144, 8, 262159, 262144, 8, 327695, 262144, 8, 458767, 262144, 8, 589839, 262144, 8, 655375, 262144, 8, 720911, 262144, 8, 786447, 262144, 8, 917519, 262144, 8, 983055, 262144, 8, 1114127, 262144, 8, 65552, 262144, 8, 131088, 262144, 8, 196624, 262144, 8, 262160, 262144, 8, 327696, 262144, 8, 458768, 262144, 8, 589840, 262144, 8, 655376, 262144, 8, 720912, 262144, 8, 786448, 262144, 8, 917520, 262144, 8, 983056, 262144, 8, 1114128, 262144, 8, 720913, 262144, 8, 786449, 262144, 8, 917521, 262144, 8, 983057, 262144, 8, 1114129, 262144, 8, 262162, 262144, 8, 327698, 262144, 8, 458770, 262144, 8, 524306, 262144, 8, 655378, 262144, 8, 720914, 262144, 8, 786450, 262144, 8, 1114130, 262144, 8, 65555, 262144, 8, 131091, 262144, 8, 196627, 262144, 8, 262163, 262144, 8, 327699, 262144, 8, 458771, 262144, 8, 524307, 262144, 8, 851987, 262144, 8, 917523, 262144, 8, 983059, 262144, 8, 1114131, 262144, 8, 65556, 262144, 8, 131092, 262144, 8, 196628, 262144, 8, 262164, 262144, 8, 327700, 262144, 8, 458772, 262144, 8, 524308, 262144, 8, 655380, 262144, 8, 1114132, 262144, 8, 458773, 262144, 8, 524309, 262144, 8, 589845, 262144, 8, 655381, 262144, 8, 786453, 262144, 8, 851989, 262144, 8, 917525, 262144, 8, 983061, 262144, 8, 1114133, 262144, 8, 131094, 262144, 8, 196630, 262144, 8, 262166, 262144, 8, 327702, 262144, 8, 393238, 262144, 8, 458774, 262144, 8, 786454, 262144, 8, 851990, 262144, 8, 917526, 262144, 8, 983062, 262144, 8, 1114134, 262144, 8, 131095, 262144, 8, 196631, 262144, 8, 262167, 262144, 8, 327703, 262144, 8, 393239, 262144, 8, 458775, 262144, 8, 589847, 262144, 8, 655383, 262144, 8, 786455, 262144, 8, 851991, 262144, 8, 917527, 262144, 8, 983063, 262144, 8, 1114135, 262144, 8, 131096, 262144, 8, 196632, 262144, 8, 262168, 262144, 8, 327704, 262144, 8, 393240, 262144, 8, 458776, 262144, 8, 589848, 262144, 8, 1114136, 262144, 8, 589849, 262144, 8, 655385, 262144, 8, 720921, 262144, 8, 786457, 262144, 8, 851993, 262144, 8, 917529, 262144, 8, 983065, 262144, 8, 1114137, 262144, 8, 131098, 262144, 8, 262170, 262144, 8, 327706, 262144, 8, 393242, 262144, 8, 458778, 262144, 8, 589850, 262144, 8, 655386, 262144, 8, 720922, 262144, 8, 786458, 262144, 8, 851994, 262144, 8, 917530, 262144, 8, 983066, 262144, 8, 327707, 262144, 8, 393243, 262144, 8, 458779, 262144, 8, 589851, 262144, 8, 1114139, 262144, 8, 196636, 262144, 8, 458780, 262144, 8, 589852, 262144, 8, 720924, 262144, 8, 786460, 262144, 8, 851996, 262144, 8, 917532, 262144, 8, 983068, 262144, 8, 1114140, 262144, 8, 196637, 262144, 8, 458781, 262144, 8, 589853, 262144, 8, 720925, 262144, 8, 786461, 262144, 8, 851997, 262144, 8, 917533, 262144, 8, 983069, 262144, 8, 1114141, 262144, 8, 131102, 262144, 8, 589854, 262144, 8, 720926, 262144, 8, 851998, 262144, 8, 917534, 262144, 8, 983070, 262144, 8, 1114142, 262144, 8, 131103, 262144, 8, 262175, 262144, 8, 458783, 262144, 8, 524319, 262144, 8, 589855, 262144, 8, 720927, 262144, 8, 1114143, 262144, 8, 65568, 262144, 8, 131104, 262144, 8, 262176, 262144, 8, 458784, 262144, 8, 720928, 262144, 8, 917536, 262144, 8, 983072, 262144, 8, 1048608, 262144, 8, 1114144, 262144, 8, 65569, 262144, 8, 458785, 262144, 8, 589857, 262144, 8, 655393, 262144, 8, 720929, 262144, 8, 917537, 262144, 8, 983073, 262144, 8, 1048609, 262144, 8, 1114145, 262144, 8, 65570, 262144, 8, 196642, 262144, 8, 327714, 262144, 8, 1048610, 262144, 8, 1114146, 262144, 8, 65571, 262144, 8, 196643, 262144, 8, 458787, 262144, 8, 524323, 262144, 8, 589859, 262144, 8, 655395, 262144, 8, 720931, 262144, 8, 786467, 262144, 8, 917539, 262144, 8, 983075, 262144, 8, 1048611, 262144, 8, 1114147, 262144, 8, 65572, 262144, 8, 196644, 262144, 8, 262180, 262144, 8, 327716, 262144, 8, 393252, 262144, 8, 458788, 262144, 8, 524324, 262144, 8, 589860, 262144, 8, 655396, 262144, 8, 720932, 262144, 8, 786468, 262144, 8, 917540, 262144, 8, 983076, 262144, 8, 1048612, 262144, 8, 1114148, 262144, 8, 262181, 262144, 8, 327717, 262144, 8, 393253, 262144, 8, 458789, 262144, 8, 524325, 262144, 8, 917541, 262144, 8, 983077, 262144, 8, 1048613, 262144, 8, 1114149, 262144, 8, 458790, 262144, 8, 524326, 262144, 8, 655398, 262144, 8, 720934, 262144, 8, 786470, 262144, 8, 852006, 262144, 8, 917542, 262144, 8, 983078, 262144, 8, 1048614, 262144, 8, 1114150, 262144, 8, 262145, 262144, 8, 327681, 262144, 8, 262146, 262144, 8, 327682, 262144, 8, 14, 262144, 8, 327709, 262144, 8, 327711, 262144, 8, 327712, 262144, 8, 327713, 262144, 8, 852000, 262144, 8, 852001, 262144, 8, 6, 262144, 8, 65542, 262144, 8, 7, 262144, 8, 65543, 262144, 8, 36, 262144, 8, 37, 262144, 8, 38, 262144, 8, 39, 262144, 8, 65575, 262144, 8, 131111, 262144, 8, 5, 262144, 8, 65562, 262144, 8, 65563, 262144, 8, 65564, 262144, 8, 65565, 262144, 8, 65566, 262144, 8, 65567, 262144, 8, 40, 262144, 8, 65576, 262144, 8, 131112, 262144, 8, 196648, 262144, 8, 262184, 262144, 8, 327720, 262144, 8, 393256, 262144, 8, 458792, 262144, 8, 524328, 262144, 8, 589864, 262144, 8, 655400, 262144, 8, 720936, 262144, 8, 786472, 262144, 8, 852008, 262144, 8, 917544, 262144, 8, 983080, 262144, 8, 1048616, 262144, 8, 1114152, 262144, 8, 1179688, 262144, 8, 1245224, 262144, 8)
metadata/_edit_lock_ = true

[node name="label_time" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="label_time"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Time: "
horizontal_alignment = 1

[node name="chegada" parent="." instance=ExtResource("4_5p35h")]
position = Vector2(616, 18)

[node name="TimerGame" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="TimerInit" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="label_fase" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="label_fase"]
offset_right = 40.0
offset_bottom = 23.0
text = "level 2  --> 15 seconds"

[node name="More Time" type="Node2D" parent="."]

[node name="moreTime" parent="More Time" instance=ExtResource("5_5odvk")]

[node name="moreTime2" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(30, 126)

[node name="moreTime3" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(194, -81)

[node name="moreTime5" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(237, -80)

[node name="moreTime6" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(321, 32)

[node name="moreTime7" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(319, 176)

[node name="moreTime8" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(319, 176)

[node name="moreTime9" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(495, 47)

[node name="moreTime10" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(192, 114)

[node name="moreTime11" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(94, -80)

[node name="moreTime12" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(416, 63)

[node name="moreTime4" parent="More Time" instance=ExtResource("5_5odvk")]
position = Vector2(-47, -2)

[connection signal="body_entered" from="chegada" to="." method="_on_chegada_body_entered"]
[connection signal="timeout" from="TimerGame" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerGame" to="TimerGame" method="_on_timeout"]
[connection signal="timeout" from="TimerInit" to="." method="_on_timer_init_timeout"]
